Add calendar visualization

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,17 @@
-<div class="jumbotron">
-  <h2>Welcome to smove's JSChallenge!</h2>
-  <p class="lead">
-    Now it's your turn.</br>
-    Blow us away with your awesomeness.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-  <p>ps. go have a look at main.js for the api call</p>
+<div>
+  <h2>Cars availability in the next week for {{rentalTime}} hours rental</h2>
+  <div id="viz"></div>
+  <div class="content">
+    <h3>Description</h3>
+    <ul>
+      <li>Each cell in this table is a map of the smove pick-up points (really small map but a map)</li>
+      <li>Each dot is one parking</li>
+      <li>When the dot is there it means that there is a car available</li>
+      <li>Small dot - 1 car available. Medium dot - 2 cars. Big dot - 3 cars</li>
+      <li>Mouse over the points and wait to see the parking name</li>
+      <li>You can quickly see the cars availability throughout the next week</li>
+      <li>This is availability for the 2 hours rental</li>
+    </ul>
+    <p>prepared with &lt;3 by <a href="http://cygalski.pl/" target="_blank">Domajno</a></p>
+  </div>
 </div>
