--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,77 +7,50 @@
 
 body {
   padding: 0;
+  margin: 0;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
+h2 {
   text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
+.content {
+  padding: 1em;
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
+#viz {
+  width: 100vw;
+}
 
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+#viz table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  background-color: #F6F6F6;
+}
+#viz td {
+  width: calc(100vw/17.5);
+  height: calc(100vw/17.5);
+  padding: 0;
+  border-bottom: 1px dashed #DEDEDE;
+  border-right: 1px dashed #DEDEDE;
+}
+
+#viz tr:first-child td {
+  height: calc(100vw/34) !important;
+  text-align: center;
+  color: #999;
+  font-family: sans-serif;
+  font-size: calc(100vw/128);
+}
+
+#viz td:first-child {
+  width: calc(100vw/34) !important;
+  text-align: center;
+  color: #999;
+  font-family: sans-serif;
+  font-size: calc(100vw/128);
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
